--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,9 @@
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./src/*"]
+    ],    "paths": {
+      "@/*": ["./src/*"],
+      "@/components/*": ["./components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
